--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,22 @@
 </head>
 <body>
 
+  
+<% if current_user %>
+<h4>Current User: <%= current_user.username %></h4>
+<%= button_to("LOG OUT", session_url, method: :delete) %>
+<% else %>
+<%= link_to("LOG IN", new_session_url) %>
+<%= link_to("SIGN UP", new_user_url) %>
+<% end %>
+  
+<% flash.each do |type, msgs| %>
+  <h3><%= type %></h3>
+  <% msgs.each do |msg|%>
+    <p><%= msg %></p>
+  <% end %>
+<% end %>
+
 <%= yield %>
 
 </body>
