--- a/app/views/spaces/index.html.erb
+++ b/app/views/spaces/index.html.erb
@@ -1,4 +1,6 @@
 <h1>Spaces#index</h1>
 <p>Find me in app/views/spaces/index.html.erb</p>
 
-<script>$(StarbnbSearch.initialize);</script>
+<div class="results"></div>
+
+<script>$(Starbnb.initialize);</script>
