--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -13,3 +13,26 @@
  *= require_tree .
  *= require_self
  */
+
+@import "bootstrap-sprockets";
+@import "bootstrap";
+
+.logo {
+  max-width:100%;
+  max-height:100%;
+}
+
+.navbar-brand {
+  padding: 5px 20px 5px 20px;
+}
+
+.search-map-pane {
+  width: 100px;
+  height: 100%;
+  background-color: yellow;
+  display: block;
+}
+
+/********************************************************************/
+
+
