--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -27,12 +27,5 @@
 }
 
 .search-map-pane {
-  width: 100px;
-  height: 100%;
-  background-color: yellow;
-  display: block;
+  height:100vh;
 }
-
-/********************************************************************/
-
-
