--- a/app/views/static_pages/search.html.erb
+++ b/app/views/static_pages/search.html.erb
@@ -1,8 +1,11 @@
-<div class="search-map-pane"></div>
+
+<div class="row">
+  <div class="search-map-pane col-xs-5">MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP </div>
 
 
-<h1>StaticPages#search</h1>
+  <h1>StaticPages#search</h1>
 
-<div class="results"></div>
+  <div class="results"></div>
 
-<script>$(Starbnb.initialize);</script>
+  <script>$(Starbnb.initialize);</script>
+</div>
