--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="icon" 
-        type="image/starbnb-favicon" 
-        href="http://example.com/myicon.png">
+<%= favicon_link_tag 'favicon.ico' %>
   
   <title>Starbnb</title>
   <%= stylesheet_link_tag    'application', media: 'all'%>
