implement live sorting

--- a/app/assets/templates/search_sidebar.jst.ejs
+++ b/app/assets/templates/search_sidebar.jst.ejs
@@ -28,8 +28,8 @@
   <div class="form-group">
     <label for="price-slider">Price Range</label>
     <div id="price-slider" name="space[priceRange]"></div>
-    <input id="price-lower"></input>
-    <input id="price-upper"></input>
+    <input id="price-lower" class=slider-data ></input>
+    <input id="price-upper" class=slider-data ></input>
   </div>
 </form>
 <div class="results-wrapper">
