add gmaps gem change spaces to ports

--- a/app/assets/templates/search_sidebar.jst.ejs
+++ b/app/assets/templates/search_sidebar.jst.ejs
@@ -16,13 +16,13 @@
   </div>
   <div class="checkbox" name="space[style]">
     <label>
-      <input class="checkbox-choice" type="checkbox" value="planet"> Planet
+      <input class="checkbox-choice" type="checkbox" value="port"> Entire Port
     </label>
     <label>
-      <input class="checkbox-choice" type="checkbox" value="moon"> Moon
+      <input class="checkbox-choice" type="checkbox" value="field"> Private Airfield
     </label>
     <label>
-      <input class="checkbox-choice" type="checkbox" value="station"> Station
+      <input class="checkbox-choice" type="checkbox" value="pad"> Shared Airfield
     </label>
   </div>
   <div class="form-group">
