--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -19,6 +19,13 @@
 @import "bootstrap";
 @import 'bootstrap-datetimepicker';
 
+html, body, #map-canvas { 
+  height: 100vh;
+  width: 100%; 
+  margin: 0; 
+  padding: 0;
+}
+
 .logo {
   max-width:100%;
   max-height:100%;
