eliminate results view

--- a/app/assets/templates/search_sidebar.jst.ejs
+++ b/app/assets/templates/search_sidebar.jst.ejs
@@ -32,5 +32,4 @@
     <input id="price-upper" class=slider-data ></input>
   </div>
 </form>
-<div class="results-wrapper">
-</div>
+<div class="briefs"></div>
