--- a/app/assets/templates/search_sidebar.jst.ejs
+++ b/app/assets/templates/search_sidebar.jst.ejs
@@ -31,4 +31,4 @@
     <input id="price-upper" class=slider-data ></input>
   </div>
 </form>
-<div class="briefs"></div>
+<div class="briefs row"></div>
