clean out stray views build basic backend for photos & users

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -56,6 +56,7 @@ div.briefs div.brief {
   margin-top: 50px;
   margin-left: 40%;
   padding-left: 30px;
+  padding-top: 20px;
 }
 .search-map-frame {
   width: 40%;
@@ -68,6 +69,15 @@ div.briefs div.brief {
 
   height: 100vh;
 
+}
+
+.slider-data {
+  width: 40px;
+}
+
+#price-upper {
+  width: 40px;
+  float: right;
 }
 
 ************************************************************
