add port images front end

--- a/app/assets/templates/ports/brief_port.jst.ejs
+++ b/app/assets/templates/ports/brief_port.jst.ejs
@@ -2,7 +2,7 @@
 <div class="brief-img-wrapper col-xs-12">
   <div id="dummy-x"></div>
   <div id="element-x">
-    <img src="assets/port/jebs.jpg" class="brief-img">
+    <img src="<%= port.photos().at(0).escape('url') %>" class="brief-img">
   </div>
 </div>
 
