add basic show page for spacePorts

--- a/app/assets/templates/ports/brief_port.jst.ejs
+++ b/app/assets/templates/ports/brief_port.jst.ejs
@@ -1,4 +1,4 @@
-
+<a href="<%= '#/' + port.get('id') %>">
 <div class="brief-img-wrapper col-xs-12">
   <div class="brief-price-frame">
     <span class="brief-dollar"><strong>$</strong></span>
@@ -23,5 +23,5 @@
     <li></li>
   </ul>
 </div>
-
+</a>
 
