--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,7 +1,3 @@
 HOME PAGE
 
-<%= link_to("look for spaces", "/search") %>
-
-
-<br>
-<img src="assets/port/jebs.jpg">
+<%= link_to("look for spaces", "/index") %>
