changed port to spaceport for clarity

--- a/app/assets/templates/search_sidebar.jst.ejs
+++ b/app/assets/templates/search_sidebar.jst.ejs
@@ -36,7 +36,7 @@
           <div class="checkbox" name="space[style]">
             <div class="col-xs-4">
               <label>
-                <input class="checkbox-choice" type="checkbox" value="port"> Entire Port
+                <input class="checkbox-choice" type="checkbox" value="spaceport"> Entire Spaceport
               </label>
             </div>
             <div class="col-xs-4">
