add styling/features to spaceport show

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -30,6 +30,13 @@ html, body, #map-canvas {
   padding: 0;
 }
 
+.book-button {
+	width: 100%;
+	background-color: #f32561;
+	color: white;
+	border: none;
+}
+
 div.body-inner-wrapper {
 	padding: 0;
 }
