--- a/app/assets/templates/search_sidebar.jst.ejs
+++ b/app/assets/templates/search_sidebar.jst.ejs
@@ -11,7 +11,7 @@
               name="space[checkIn]"
               class="form-control datetimepicker"
               placeholder="Check In" 
-              id='datetimepickerStart'/>
+              id='datetimepickerStart'>
           </div>
           <div class="col-xs-4">
             <input 
@@ -19,7 +19,7 @@
               type='text' 
               class="form-control datetimepicker"
               placeholder="Check Out"  
-              id='datetimepickerEnd'/>
+              id='datetimepickerEnd'>
           </div>
           <div class="col-xs-4">
             Staff size
