--- a/app/assets/templates/spaceports/show_spaceport.jst.ejs
+++ b/app/assets/templates/spaceports/show_spaceport.jst.ejs
@@ -26,35 +26,76 @@
 				</div>
 			</div>
 			
-			<div class="col-xs-6">
+			<div class="col-xs-4">
 				<div class="row">
 					<div class="col-xs-12">
 						<h4><%= spaceport.escape("name") %></h4>
-						<h5>SPACEPORT SHOW PAGE</h5>
+						<h5><%= spaceport.escape("address") %></h5>
 					</div>
 					<div class="col-xs-12">
 						<div class="row">
 							<div class="col-xs-3">
 								<p>
+									<h3><span class="glyphicon glyphicon-flag"></span></h3>
 									<%= spaceport.styleStr() %>
 								</p>
 							</div>
 							<div class="col-xs-3">
 								<p>
+									<h3><span class="glyphicon glyphicon-user"></span></h3>
 									<%= spaceport.get("staff") + " Staff" %>
 								</p>
 							</div>
 							<div class="col-xs-3">
 								<p>
+									<h3><span class="glyphicon glyphicon-arrow-up"></span></h3>
 									<%= spaceport.get("pads") + " Launchpads" %>
 								</p>
 							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			
+			<div class="col-xs-4">
+				<div class="row">
+					<div class="col-xs-12">
+						<div class="row">
+							<div class="col-xs-9">
+								<div class="row">
+									<div class="col-xs-6">
+										<p>Check In</p>
+									</div>
+									<div class="col-xs-6">
+										<p>Check Out</p>
+									</div>
+									<div class="col-xs-6">
+				            <input type='text'
+				              name="space[checkIn]"
+				              class="form-control datetimepicker"
+				              placeholder="mm/dd/yyyy" 
+				              id='datetimepickerStart'>
+									</div>
+									<div class="col-xs-6">
+				            <input 
+				              name="space[checkOut]"
+				              type='text' 
+				              class="form-control datetimepicker"
+				              placeholder="mm/dd/yyyy"  
+				              id='datetimepickerEnd'>
+									</div>
+								</div>
+							</div>
 							<div class="col-xs-3">
-								<p>
-									<%= spaceport.get("staff") + " Staff" %>
-								</p>
+								<p>Staff</p>
 							</div>
 						</div>
+					</div>
+					<div class="col-xs-12">
+						<button
+							class="book-button">
+							Book Now
+						</button>
 					</div>
 				</div>
 			</div>
