style spaceport show

--- a/app/assets/templates/spaceports/brief_spaceport.jst.ejs
+++ b/app/assets/templates/spaceports/brief_spaceport.jst.ejs
@@ -1,8 +1,8 @@
 <a href="<%= '#/spaceports/' + spaceport.get('id') %>">
 	<div class="brief-img-wrapper col-xs-12">
 	  <div class="brief-price-frame">
-	    <span class="brief-dollar"><strong>$</strong></span>
-	    <h3 class="brief-price"><%= spaceport.escape('price') %></h3>
+	    <span class="brief-dollar price-color"><strong>$</strong></span>
+	    <h3 class="brief-price price-color"><%= spaceport.escape('price') %></h3>
 	  </div>
 	  <div id="dummy-x"></div>
 	  <div id="element-x">
