--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -19,6 +19,20 @@
 @import "bootstrap";
 @import 'bootstrap-datetimepicker';
 
+
+a, p, h1, h2, h3, h4, h5, h6, span {
+	font-family: Circular,"Helvetica Neue",Helvetica,Arial,sans-serif;
+	color: #565a5c;
+}
+
+.price-color {
+	color: white;
+}
+
+h1, h2, h3, h4, h5, h6 {
+	font-weight: normal;
+}
+
 ul {
   list-style-type: none;
 }
@@ -30,15 +44,57 @@ html, body, #map-canvas {
   padding: 0;
 }
 
+.centered-text {
+	text-align: center;
+}
+
 .book-button {
 	width: 100%;
-	background-color: #f32561;
+	height: 40px;
+	background-color: #ea5e66;
 	color: white;
 	border: none;
+	margin-top: 30px;
+	border-radius: 2px;
 }
 
 div.body-inner-wrapper {
 	padding: 0;
+}
+
+.glyphicon {
+	display: block;
+	text-align: center;
+	font-size: 3em;
+}
+
+//.staff-field {
+//	width: 100%;
+//}
+
+.spaceport-price-wrapper {
+	position: absolute;
+	width: 100%;
+	height: 40px;
+	background-color: rgba(80,80,80,.8);
+	top: -60px;
+	padding: 6px 15px;
+}
+
+.spaceport-price-box {
+	float: left;
+}
+
+.spaceport-per-day-box {
+	float: left;
+}
+
+.space-port-price {
+	margin: 0;
+}
+
+.space-port-per-day {
+	float:right;
 }
 
 .spaceport-image-wrapper {
@@ -60,11 +116,17 @@ div.body-inner-wrapper {
 .spaceport-panel-row {
 	position: absolute;
 	margin: 0;
-	height: 180px;
+	height: 185px;
 	width: 100%;
-	top: -180px;
+	top: -185px;
 	background-color: white;
-	padding:25px;
+	padding:20px;
+}
+
+.spaceport-panel-info-wrapper {
+	width: 1045px;
+	padding: 0 25px;
+	margin: auto;
 }
 
 .spaceport-user-img-frame {
@@ -74,6 +136,7 @@ div.body-inner-wrapper {
   border-radius:45px;
 	border: 2px solid white;
 	cursor: pointer;
+	margin: auto;
 }
 
 div.briefs div.brief {
