--- a/app/assets/templates/spaceports/show_spaceport.jst.ejs
+++ b/app/assets/templates/spaceports/show_spaceport.jst.ejs
@@ -96,14 +96,14 @@
 											<div class="col-xs-6">
 												<p>Check Out</p>
 											</div>
-											<div class="col-xs-6">
+											<div class="col-xs-6 date-col">
 												<input type='text'
 												name="space[checkIn]"
 												class="form-control datetimepicker"
 												placeholder="mm/dd/yyyy" 
 												id='datetimepickerStart'>
 											</div>
-											<div class="col-xs-6">
+											<div class="col-xs-6 date-col">
 												<input 
 												name="space[checkOut]"
 												type='text' 
