--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,8 @@
   
 </head>
 <body>
-
+<%= render "layouts/new_user" %>
+<%= render "layouts/new_session" %>
 
 
 <div class="body-inner-wrapper container-fluid">
