--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -18,8 +18,16 @@
         <li><a href="#"><%= current_user.username %></a></li>
         <li><%= button_to("LOG OUT", session_url, method: :delete, class: "btn btn-default navbar-btn") %></li>
         <% else %>
-        <li><%= link_to("SIGN UP", new_user_url) %></li>
-        <li><%= link_to("LOG IN", new_session_url) %></li>
+        <li>
+          <a class="" data-toggle="modal"  data-target="#newUserModal">
+            SIGN UP
+          </a> <!-- Button trigger modal from body-->
+        </li>
+        <li>
+          <a class="" data-toggle="modal"  data-target="#newSessionModal">
+            LOGIN
+          </a> <!-- Button trigger modal from body-->
+        </li>
         <% end %>
       </ul>
     </div><!-- /.navbar-collapse -->
